--- a/project/modules/logboard-views/app/views/index-start.html
+++ b/project/modules/logboard-views/app/views/index-start.html
@@ -7,9 +7,10 @@
     <meta name="description" content="logboard 日志应用系统">
     <meta name="keywords" content="logs, big data">
     <meta name="author" content="yaoooo and Bootstrap contributors">
-    <title>logboard 日志应用系统</title>
+    <title>logboard 日志应用系统 首页</title>
     <link rel="stylesheet" href="../res/styles/css/bootstrap-3.3.7.css"/>
     <link rel="stylesheet" href="../res/styles/css/leaflet-1.0.0rc3.css"/>
+    <link rel="stylesheet" href="../res/styles/css/nv.d3.css"/>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.css' rel='stylesheet'/>
     <link rel="stylesheet" href="../res/fonts/css/font-awesome.css">
     <link rel="stylesheet" href="../res/styles/general.css"/>
@@ -18,6 +19,7 @@
     <link rel="stylesheet" href="../res/styles/ipviews.css"/>
     <link rel="stylesheet" href="../res/styles/colors.css"/>
     <link rel="stylesheet" href="../res/styles/svg.css"/>
+    <link rel="stylesheet" href="../res/styles/logscharts.css"/>
 </head>
 
 <body>
@@ -63,7 +65,7 @@
                 <button class="btn c_fff  bg_transparent _white_border _width40 letter_spacing4">日志搜索</button>
             </div>
         </div>
-        <div class="col-sm-4 " onclick="window.open('logs-stats.html')">
+        <div class="col-sm-4 " onclick="window.open('logs-monitor.html')">
             <div style="margin-top: 25%">
                 <img class="top-icon" src="../images/top-monitor.svg" alt="日志监控">
                 <div class="row blank_divider30 "></div>
@@ -111,21 +113,20 @@
 <!--/首屏简介模块-->
 
 <!--系统概览模块-->
-
 <div id="logsOverview" class="container-fluid screen-page  ">
     <div class="row  _height100 _text_align_center margin-top3 ">
         <!--日志饼状图-->
-        <div class="col-sm-3 ">
+        <div class="col-sm-5">
             <div class="row">
-                <svg id="svgExpStatsPie" width="200" height="200"></svg>
+                <svg id="svgLogsGenaralPie" width="400" height="200"></svg>
             </div>
             <div class="blank_divider100"></div>
-            <div class="row">
-                <svg id="svgExpStatsLegend" width="210" height="200"></svg>
-            </div>
+            <!--<div class="row">-->
+            <!--<svg id="svgExpStatsLegend" width="210" height="200"></svg>-->
+            <!--</div>-->
         </div>
         <!--日志曲线图-->
-        <div class="col-sm-9">
+        <div class="col-sm-7">
             <div id="logsCurveHeader" class="row bg_white_pure ">
                 <div class="col-sm-3 _text_align_center">
                 </div>
@@ -142,7 +143,9 @@
                     </span>
                 </div>
             </div>
+
             <div class="blank_divider20"></div>
+
             <div id="logsGeneralCurve" class="row bg_white_pure">
                 <div class="col-sm-12 _text_align_center">
                     <svg id="svgLogsGenaral" width="960" height="400"></svg>
@@ -187,7 +190,7 @@
     </div>
 
     <!--异常消息列表-->
-    <div id="expDetails" class=" row ">
+    <div id="expDetails" class="row">
 
         <div class="col-sm-1  _text_align_center _to_top30 ">
             <i class="fa  fa-angle-left fa-4x  c_bdbdbd"></i>
@@ -300,7 +303,7 @@
     <div class="row blank_divider30"></div>
     <h2>日志统计</h2>
     <div>
-        <svg id="svgLogsForce" width="1080" height="512"></svg>
+        <svg id="svgLogsStats" width="1080" height="512"></svg>
     </div>
 </div>
 <!--/日志统计模块-->
@@ -348,7 +351,7 @@
         </div>
         <!--/访问排行榜-->
 
-        <div class="co-sm-9 _text_align_center ">
+        <div class="co-sm-9 _text_align_right ">
             <!--<h2>IP访客分布图</h2>-->
             <div id="map" class=""></div>
         </div>
@@ -399,313 +402,31 @@
 <!-- jQuery first, optional tether for tooltips, then Bootstrap JS. -->
 <script type="text/javascript" src="../res/scripts/js/jquery-3.1.0.js"></script>
 <script type="text/javascript" src="../res/scripts/js/tether-1.3.2.min.js"></script>
-<!--<script type="text/javascript" src="../res/scripts/js/bootstrap-4.0.0a3.js"></script>-->
 <script type="text/javascript" src="../res/scripts/js/bootstrap-3.3.7.js"></script>
 <script type="text/javascript" src="../res/scripts/js/holder-2.6.0.min.js"></script>
 <script type="text/javascript" src="../res/scripts/js/d3-3.5.17.js"></script>
+<script type="text/javascript" src="../res/scripts/js/nv.d3.js"></script>
 <script type="text/javascript" src="../res/scripts/js/leaflet-1.0.0rc3.js"></script>
-<!--<script type="text/javascript" src="../res/scripts/svg.js"></script>-->
-<!--<script type="text/javascript" src="../res/scripts/scripts.js"></script>-->
+<script type="text/javascript" src="../res/scripts/logscharts.js"></script>
 <script type="text/javascript" src="../res/scripts/utils.js"></script>
-<!--<script type="text/javascript" src="../res/scripts/ipviews.js"></script>-->
+<script type="text/javascript" src="../res/scripts/ipviews.js"></script>
+<!--<script type="text/javascript" src="../res/scripts/svg.js"></script>-->
 <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js'></script>
 
 
 <script type="text/javascript">
 
-    <!--
-    IP地址浏览-->
-    var apps = apps || {};
-    apps.namespace = function (str) {
-        var parts = str.split("."),
-                parent = apps,
-                i = 0,
-                l = 0;
 
-        if (parts[0] === "apps") {
-            parts = parts.slice(1);
-        }
+    // 图表绘制
+    (function () {
+        createLogsGeneralPie();
+        createLogsGeneralCurve();
+        createLogsExpCurve();
+        createLogsStatsForces();
+        createIPGeoViews();
 
-        for (i = 0, l = parts.length; i < l; i++) {
-            if (typeof parent[parts[i]] === "undefined") {
-                parent[parts[i]] = {};
-            }
-            parent = parent[parts[i]];
-        }
-        return parent;
-    }
+    })();
 
-    apps.attrs = {
-        "mapSources": [
-            {
-                "mapbox": "//{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png"
-            },
-            {
-                "autonavi": "//webrd0{s}.is.autonavi.com/appmaptile?lang=zh_cn&size=1&scale=1&style=8&x={x}&y={y}&z={z}"
-            },
-            {
-                "osm": "//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
-            }
-        ]
-    };
-
-    apps.data = {
-        "hgtPoint": {
-            "type": "FeatureCollection",
-            "crs": {
-                "type": "name",
-                "properties": {
-                    "name": "urn:ogc:def:crs:OGC:1.3:CRS84"
-                }
-            },
-            "features": [
-                {
-                    "type": "Feature",
-                    "properties": {
-                        "time": 16,
-                        "id": "route1",
-                        "name": "lhkServerPoint"
-                    },
-                    "geometry": {
-                        "type": "Point",
-                        "coordinates": [
-                            114.400,
-                            30.503
-                        ]
-                    }
-                }
-            ]
-        },
-
-        "ipPoints1": {
-            "type": "FeatureCollection",
-            "crs": {
-                "type": "name",
-                "properties": {
-                    "name": "urn:ogc:def:crs:OGC:1.3:CRS84"
-                }
-            },
-            "features": [
-                {
-                    "type": "Feature",
-                    "properties": {
-                        "time": 1,
-                        "id": "route1",
-                        "name": "p1"
-                    },
-                    "geometry": {
-                        "type": "Point",
-                        "coordinates": [
-                            114.360477,
-                            30.527036
-                        ]
-                    }
-                },
-                {
-                    "type": "Feature",
-                    "properties": {
-
-                        "time": 16,
-                        "id": "route1",
-                        "name": "p2"
-                    },
-                    "geometry": {
-                        "type": "Point",
-                        "coordinates": [
-                            114.420,
-                            30.520
-                        ]
-                    }
-                }
-            ]
-        }
-    };
-
-    apps.maps = {
-        mapOperations: (function () {
-            return {
-                initBasemap: function (mapUrl) {
-                    return L.tileLayer(mapUrl);
-                }
-
-            }
-        })(),
-        animations: {
-            arcInterpolate: function (points) {
-                return points.join("A 30,30 0 0 1 ");
-            }
-
-        },
-        general: {
-            projectPoint: function (x, y) {
-                var point = apps.attrs.map.latLngToLayerPoint(new L.LatLng(y, x));
-                this.stream.point(point.x, point.y);
-            },
-            applyLatLngToLayer: function (d) {
-                //获取纬度
-                var y = d.geometry.coordinates[1];
-                //获取经度
-                var x = d.geometry.coordinates[0];
-                //LatLngToLayerPoint is used to get coordinates for the layer's new position
-                return apps.attrs.map.latLngToLayerPoint(new L.LatLng(y, x));
-            }
-        }
-    };
-
-    apps.start = {
-        init: function () {
-            var mData = apps.namespace("apps.data");
-
-
-            var mapTiles = L.tileLayer(apps.attrs.mapSources[0].mapbox);
-            apps.attrs.map = L.map('map').addLayer(mapTiles).setView([30.520, 114.360], 10);
-            var map = apps.namespace("apps.attrs.map");
-            apps.attrs.svg = d3.select(map.getPanes().overlayPane).append("svg");
-            apps.attrs.g = apps.attrs.svg.append("g").attr("class", "leaflet-zoom-hide");
-
-        },
-        go: function () {
-            var mData = apps.namespace("apps.data");
-            var mMaps = apps.namespace("apps.maps");
-
-            var mMapOperations = apps.namespace("apps.maps.mapOperations");
-            var map = apps.namespace("apps.attrs.map");
-            var svg = apps.namespace("apps.attrs.svg");
-            var g = apps.namespace("apps.attrs.g");
-
-            var lhkServerPoint = mData.hgtPoint;
-            var ipPoints = mData.ipPoints1;
-
-//            console.log(lhkServerPoint)
-//            console.log(ipPoints)
-
-
-            //把导入的各个坐标点作为起点，把服务器位置作为终点，构建起止点数组
-            var startEndArr = [];
-            var pLength = ipPoints.features.length;
-            for (var i = 0; i < pLength; i++) {
-                var tempLine = cloneObj(lhkServerPoint);
-                var x1 = lhkServerPoint.features[0];
-                tempLine.features[0] = ipPoints.features[i];
-                tempLine.features[1] = x1;
-                startEndArr[i] = tempLine;
-            }
-//            console.log(startEndArr);
-
-            //定义方法：将经纬度转成屏幕地图图层点
-            var transform = d3.geo.transform({
-                point: apps.maps.general.projectPoint
-            });
-            var d3path = d3.geo.path().projection(transform);
-
-
-            var collection = startEndArr[0];
-            var featuresdata = collection.features;
-
-
-            var toLine = d3.svg.line()
-                    .interpolate(function (points) {
-                        return points.join("A 30,30 0 0 1 ");
-                    })
-                    .x(function (d) {
-                        return mMaps.general.applyLatLngToLayer(d).x;
-                    })
-                    .y(function (d) {
-                        return mMaps.general.applyLatLngToLayer(d).y;
-                    });
-
-
-//            目标服务器点，用于reset刷新
-            var ptFeatures = g.selectAll("circle")
-                    .data(lhkServerPoint.features)
-                    .enter()
-                    .append("circle")
-                    .attr("r", 3)
-                    .attr("class", "travelMarker");
-
-
-            //声明每对起止点的线
-//            for (var ii = 0; ii < pLength; ii++) {
-//
-//
-//
-//            }
-
-            var lines = cloneObj([featuresdata]);
-            lines[1] = cloneObj(featuresdata);
-
-            lines[1][0].geometry.coordinates[0] = 114.43;
-
-//            console.log(lines);
-
-            //已走路线
-            var linePath = g.selectAll(".lineConnect")
-                    .data(lines)
-                    .enter()
-                    .append("path")
-                    .attr("class", "lineConnect");
-
-
-            // 运动点
-//            var marker = g.append("circle")
-//                    .attr("r", 10)
-//                    .attr("id", "marker")
-//                    .attr("class", "travelMarker");
-
-            // NOT BEST Practice. Style start & end points.
-//            var originANDdestination = [featuresdata[0], featuresdata[1]]
-
-            map.on("viewreset", reset);
-
-            // this puts stuff on the map!
-            reset();
-
-            // Reposition the SVG to cover the features. 注意裁剪
-            function reset() {
-                var bounds = d3path.bounds(ipPoints),
-                        topLeft = bounds[0],
-                        bottomRight = bounds[1];
-
-
-                ptFeatures.attr("transform",
-                        function (d) {
-                            return "translate(" +
-                                    mMaps.general.applyLatLngToLayer(d).x + "," +
-                                    mMaps.general.applyLatLngToLayer(d).y + ")";
-                        });
-
-
-                // Setting the size and location of the overall SVG container
-                svg.attr("width", bottomRight[0] - topLeft[0] + 100)
-                        .attr("height", bottomRight[1] - topLeft[1] + 100)
-                        .style("left", topLeft[0] - 50 + "px")
-                        .style("top", topLeft[1] - 50 + "px");
-
-
-                linePath.attr("d", toLine);
-
-                var totalLength = linePath.node().getTotalLength();
-
-                linePath.attr("stroke-dasharray", totalLength + "," + totalLength)
-                        .attr("stroke-dashoffset", totalLength)
-                        .transition()
-                        .duration(300)
-                        .ease("linear")
-                        .attr("stroke-dashoffset", 0)
-                ;
-
-                g.attr("transform", "translate(" + (-topLeft[0] + 50) + "," + (-topLeft[1] + 50) + ")");
-            } // end reset
-
-        }
-
-
-//        }
-    }
-
-    apps.start.init();
-    apps.start.go();
-    <!--/IP地址浏览-->
 </script>
 </body>
 </html>
