--- a/project/modules/logboard-views/app/views/logs-search.html
+++ b/project/modules/logboard-views/app/views/logs-search.html
@@ -7,7 +7,7 @@
     <meta name="description" content="leaflet demos">
     <meta name="author" content="yaoooo">
     <link rel="icon" href="../favicon.ico">
-    <title> logs search 日志搜索页</title>
+    <title> logs search 日志搜索</title>
     <!--<link href="../res/styles/css/bootstrap-4.0.0a3.css" rel="stylesheet">-->
     <link href="../res/vendor/css/bootstrap-3.3.7.css" rel="stylesheet">
     <link href="../res/styles/css/bootstrap-table.css" rel="stylesheet">
@@ -177,8 +177,6 @@
         });
 
     });
-
-
 
 
 
