--- a/project/modules/logboard-views/app/views/logs-stats.html
+++ b/project/modules/logboard-views/app/views/logs-stats.html
@@ -7,10 +7,13 @@
     <meta name="description" content="leaflet demos">
     <meta name="author" content="yaoooo">
     <link rel="icon" href="../favicon.ico">
-    <title> logs stats 日志统计页</title>
+    <title> logs stats 日志统计</title>
     <link href="../res/vendor/css/bootstrap-3.3.7.css" rel="stylesheet">
-    <!--<link href="../res/styles/general.css" rel="stylesheet">-->
+    <link href="../res/styles/css/nv.d3.css" rel="stylesheet">
     <link href="../res/styles/layout.css" rel="stylesheet">
+    <link href="../res/styles/general.css" rel="stylesheet">
+    <link href="../res/styles/bscard.css" rel="stylesheet">
+    <link href="../res/styles/logsstats.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,7 +22,8 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -32,10 +36,105 @@
 </nav>
 
 <!-- Begin page content -->
-<div class="container">
-    <div class="page-header">
-        <h1>Sticky footer with fixed navbar</h1>
+<div class="container-fluid">
+    <div class="blank_divider80"></div>
+
+    <!--设置面板-->
+    <div class="row">
+        <div class="col-sm-3">
+
+            <div id="optionsCard" class="card ">
+                <div class="panel-group" id="accordion1">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h5 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1"
+                                   href="#accordion1_1">x轴</a>
+                            </h5>
+                        </div>
+                        <div id="accordion1_1" class="panel-collapse collapse in">
+                            <div class="panel-body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim minim veniam quis nostrud
+                                    exercitation dolore magna ullamco.</p>
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco sed eiusmod tempor ut
+                                    labore
+                                    et dolore.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h5 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1"
+                                   href="#accordion1_2">y轴</a>
+                            </h5>
+                        </div>
+                        <div id="accordion1_2" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim minim veniam quis nostrud
+                                    exercitation dolore magna ullamco.</p>
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco sed eiusmod tempor ut
+                                    labore
+                                    et dolore.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h5 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1"
+                                   href="#accordion1_3">时间</a>
+                            </h5>
+                        </div>
+                        <div id="accordion1_3" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim minim veniam quis nostrud
+                                    exercitation dolore magna ullamco.</p>
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco sed eiusmod tempor ut
+                                    labore
+                                    et dolore.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h5 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1"
+                                   href="#accordion1_4">样式</a>
+                            </h5>
+                        </div>
+                        <div id="accordion1_4" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim minim veniam quis nostrud
+                                    exercitation dolore magna ullamco.</p>
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco sed eiusmod tempor ut
+                                    labore
+                                    et dolore.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+
+        <div class="col-sm-9">
+
+            <div id="chart1">
+                <svg id="resultGraph" width="800" height="360"></svg>
+            </div>
+
+        </div>
+
     </div>
+    <!--/设置面板-->
+
 </div>
 
 <footer class="footer">
@@ -45,15 +144,18 @@
 </footer>
 
 
-
 <script src="../res/scripts/js/jquery-3.1.0.js"></script>
 <script src="../res/scripts/js/holder-2.6.0.min.js"></script>
 <script src="../res/scripts/js/tether-1.3.2.min.js"></script>
 <script src="../res/vendor/js/bootstrap-3.3.7.js"></script>
+<script src="../res/scripts/js/d3-3.5.17.js"></script>
+<script src="../res/scripts/js/nv.d3.js"></script>
+<script src="../res/scripts/logsstats.js"></script>
 <!--<script src="../res/scripts/js/d3-4.2.1.js"></script>-->
 <!--<script src="scripts/js/jquery-3.1.0.min.js"></script>-->
 <!--<script src="scripts/js/bootstrap-3.3.7.min.js"></script>-->
-<script>
+<script type="text/javascript">
+
 
 </script>
 </body>
