--- a/project/modules/logboard-views/app/res/styles/general.css
+++ b/project/modules/logboard-views/app/res/styles/general.css
@@ -118,7 +118,7 @@ margin-left:24px;
 }
 
 ._width15 {
-    width: 15%;
+    width: 18%;
 }
 
 ._width30 {
@@ -147,6 +147,9 @@ margin-left:24px;
 
 ._height100 {
     height: 100%;
+}
+._height48 {
+    height: 48%;
 }
 
 ._white_border {
