--- a/project/modules/logboard-views/app/views/logs-monitor.html
+++ b/project/modules/logboard-views/app/views/logs-monitor.html
@@ -81,7 +81,10 @@
 
         <!--监控曲线-->
         <div class="col-sm-9">
-            <h2>动态曲线</h2>
+            <h2>实时变化曲线</h2>
+            <div id="svgDiv">
+                <svg id="svgMonitor" width="800" height="480"></svg>
+            </div>
         </div>
         <!--/监控曲线-->
 
@@ -100,11 +103,15 @@
 <script src="../res/scripts/js/holder-2.6.0.min.js"></script>
 <script src="../res/scripts/js/tether-1.3.2.min.js"></script>
 <script src="../res/vendor/js/bootstrap-3.3.7.js"></script>
+<script src="../res/scripts/js/d3-3.5.17.js"></script>
+<script src="../res/scripts/logsmonitor.js"></script>
 <!--<script src="../res/scripts/js/d3-4.2.1.js"></script>-->
 <!--<script src="scripts/js/jquery-3.1.0.min.js"></script>-->
 <!--<script src="scripts/js/bootstrap-3.3.7.min.js"></script>-->
 <script>
-
+    (function () {
+        createMonitorCurve();
+    }());
 </script>
 </body>
 </html>
