[ui] unified layout

--- a/project/modules/logboard-views/app/views/index-start.html
+++ b/project/modules/logboard-views/app/views/index-start.html
@@ -50,9 +50,9 @@
 </nav>
 <!-- /Fixed navbar 顶部导航栏-->
 
-<!--顶部导航栏高度站位符-->
+<!--高度占位符-->
 <div class="blank_divider51"></div>
-<!--/顶部导航栏高度站位符-->
+<!--/高度占位符-->
 
 <!--首屏简介模块-->
 <div id="logsTop" class="container-fluid screen-page ">
@@ -362,12 +362,10 @@
     <!--访客IP分布图-->
 
 </div>
-
 </div>
 <!--/用户挖掘模块-->
 
 <!--末尾页脚-->
-
 <div id="lastFooter" class="container-fluid blank_divider160 bg_gray_barely">
     <a name="about"></a>
     <div class="row blank_divider20"></div>
