--- a/project/modules/logboard-views/app/views/logs-search.html
+++ b/project/modules/logboard-views/app/views/logs-search.html
@@ -8,19 +8,17 @@
     <meta name="author" content="yaoooo">
     <link rel="icon" href="../favicon.ico">
     <title> logs search 日志搜索</title>
-    <!--<link href="../res/styles/css/bootstrap-4.0.0a3.css" rel="stylesheet">-->
     <link href="../res/vendor/css/bootstrap-3.3.7.css" rel="stylesheet">
     <link href="../res/styles/css/bootstrap-table.css" rel="stylesheet">
     <link href="../res/styles/general.css" rel="stylesheet">
     <link href="../res/styles/layout.css" rel="stylesheet">
     <link href="../res/styles/modal.css" rel="stylesheet">
     <link href="../res/styles/logssearch.css" rel="stylesheet">
-    <!--<link href="styles/css/bootstrap-4.0.0a3.min.css" rel="stylesheet">-->
 </head>
 
 <body>
 
-<!-- Fixed navbar -->
+<!-- Fixed navbar 顶部导航栏 -->
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -38,11 +36,15 @@
 
     </div>
 </nav>
+<!-- /Fixed navbar 顶部导航栏 -->
+
+<!--高度占位符-->
+<div class="blank_divider20"></div>
+<!--/高度占位符-->
 
 <!-- Begin page content -->
 <div class="container">
 
-    <div class="blank_divider20"></div>
     <!--搜索框-->
     <div >
         <div class="row">
@@ -113,7 +115,6 @@
 
 </div>
 
-
 <!--页脚-->
 <footer class="footer">
     <div class="container">
@@ -121,7 +122,6 @@
     </div>
 </footer>
 <!--/页脚-->
-
 
 <script src="../res/scripts/js/jquery-3.1.0.js"></script>
 <script src="../res/scripts/js/holder-2.6.0.min.js"></script>
@@ -131,7 +131,6 @@
 <script src="../res/scripts/general.js"></script>
 <script src="../res/scripts/modal.js"></script>
 
-<!--<script src="../res/scripts/js/d3-4.2.1.js"></script>-->
 <!--<script src="scripts/js/jquery-3.1.0.min.js"></script>-->
 <!--<script src="scripts/js/bootstrap-3.3.7.min.js"></script>-->
 <script>
