--- a/project/modules/logboard-views/app/views/logs-monitor.html
+++ b/project/modules/logboard-views/app/views/logs-monitor.html
@@ -9,19 +9,16 @@
     <link rel="icon" href="../favicon.ico">
     <title>logs monitor 日志监控</title>
     <link href="../res/vendor/css/bootstrap-3.3.7.css" rel="stylesheet">
-    <!--<link href="../res/styles/general.css" rel="stylesheet">-->
     <link href="../res/styles/layout.css" rel="stylesheet">
     <link href="../res/styles/general.css" rel="stylesheet">
     <link href="../res/styles/logsmonitor.css" rel="stylesheet">
     <link href="../res/styles/bscard.css" rel="stylesheet">
 
-    <!--<link href="styles/css/bootstrap-4.0.0a3.min.css" rel="stylesheet">-->
 </head>
 
 <body>
 
-
-<!-- Fixed navbar -->
+<!-- Fixed navbar 顶部导航栏 -->
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -36,22 +33,27 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <!--<ul class="nav navbar-nav">-->
-                <!--<li class="active"><a href="#">Home</a></li>-->
-                <!--<li><a href="#about">About</a></li>-->
-                <!--<li><a href="#contact">Contact</a></li>-->
+            <!--<li class="active"><a href="#">Home</a></li>-->
+            <!--<li><a href="#about">About</a></li>-->
+            <!--<li><a href="#contact">Contact</a></li>-->
             <!--</ul>-->
         </div>
     </div>
 </nav>
+<!-- /Fixed navbar 顶部导航栏 -->
+
+<!--高度占位符-->
+<div class="blank_divider20"></div>
+<!--/高度占位符-->
 
 <!-- Begin page content -->
 <div class="container">
-    <div class="blank_divider40"></div>
 
-    <!--设置面板-->
+    <div class="blank_divider51"></div>
+
     <div class="row">
 
-        <!--监控项目选择-->
+        <!--监控项目选择+设置面板-->
         <div class="col-sm-3">
 
             <div id="optionsCard" class="card blank_divider240 _padding_left_18 _padding_top_18">
@@ -78,7 +80,6 @@
         </div>
         <!--/监控项目选择-->
 
-
         <!--监控曲线-->
         <div class="col-sm-9">
             <h2>实时变化曲线</h2>
@@ -91,13 +92,13 @@
     </div>
 </div>
 
-
+<!--末尾页脚-->
 <footer class="footer">
     <div class="container">
         <p class="text-muted">Place sticky footer content here.</p>
     </div>
 </footer>
-
+<!--/末尾页脚-->
 
 <script src="../res/scripts/js/jquery-3.1.0.js"></script>
 <script src="../res/scripts/js/holder-2.6.0.min.js"></script>
@@ -105,13 +106,15 @@
 <script src="../res/vendor/js/bootstrap-3.3.7.js"></script>
 <script src="../res/scripts/js/d3-3.5.17.js"></script>
 <script src="../res/scripts/logsmonitor.js"></script>
-<!--<script src="../res/scripts/js/d3-4.2.1.js"></script>-->
 <!--<script src="scripts/js/jquery-3.1.0.min.js"></script>-->
 <!--<script src="scripts/js/bootstrap-3.3.7.min.js"></script>-->
 <script>
+
     (function () {
+        //绘制曲线
         createMonitorCurve();
     }());
+
 </script>
 </body>
 </html>
