--- a/project/modules/logboard-views/app/views/logs-stats.html
+++ b/project/modules/logboard-views/app/views/logs-stats.html
@@ -18,7 +18,7 @@
 
 <body>
 
-<!-- Fixed navbar -->
+<!-- Fixed navbar  顶部导航栏-->
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -34,13 +34,18 @@
 
     </div>
 </nav>
+<!-- /Fixed navbar  顶部导航栏-->
+
+<!-- 高度占位符-->
+<div class="blank_divider64"></div>
+<!--/ 高度占位符-->
 
 <!-- Begin page content -->
 <div class="container-fluid">
-    <div class="blank_divider80"></div>
 
-    <!--设置面板-->
     <div class="row">
+
+        <!--设置面板-->
         <div class="col-sm-3">
 
             <div id="optionsCard" class="card ">
@@ -122,8 +127,9 @@
             </div>
 
         </div>
+        <!--/设置面板-->
 
-
+        <!--绘制图表-->
         <div class="col-sm-9">
 
             <div id="chart1">
@@ -131,9 +137,9 @@
             </div>
 
         </div>
+        <!--/绘制图表-->
 
     </div>
-    <!--/设置面板-->
 
 </div>
 
