[add] msg_router

--- a/project/modules/logviews/app/views/logs-stats.html
+++ b/project/modules/logviews/app/views/logs-stats.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="leaflet demos">
+    <meta name="description" content="logs stats demos">
     <meta name="author" content="yaoooo">
     <link rel="icon" href="../favicon.ico">
     <title> logs stats 日志统计</title>
