--- a/project/modules/logviews/app/views/log_apps.html
+++ b/project/modules/logviews/app/views/log_apps.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="leaflet demos">
+    <meta name="description" content="log apps ">
     <meta name="author" content="yaoooo">
     <link rel="icon" href="../favicon.ico">
     <title>log apps 接入应用系统管理</title>
@@ -18,8 +18,7 @@
 
 <div class="container">
 	<div class="row">
-		
-        
+
         <div class="col-md-12">
         <h4>Bootstrap Snipp for Datatable</h4>
         <div class="table-responsive">
