--- a/project/modules/log-boot/src/main/resources/static/res/styles/general.css
+++ b/project/modules/log-boot/src/main/resources/static/res/styles/general.css
@@ -6,11 +6,11 @@ body, button, input, select, textarea, h1, h2, h3, h4, h5, h6 {
     border: none;
 }
 
-._is_visible{
+._is_visible {
     visibility: visible;
 }
 
-._is_hidden{
+._is_hidden {
     visibility: hidden;
 }
 
@@ -20,8 +20,6 @@ body, button, input, select, textarea, h1, h2, h3, h4, h5, h6 {
     margin-left: 4%;
     margin-right: 4%;
 }
-
-
 
 .exp_contents_padding {
     padding: 0.7rem;
@@ -76,7 +74,6 @@ body, button, input, select, textarea, h1, h2, h3, h4, h5, h6 {
     height: 648px;;
 }
 
-
 .top-icon {
     height: 80px;
     vertical-align: middle;
@@ -98,12 +95,13 @@ body, button, input, select, textarea, h1, h2, h3, h4, h5, h6 {
 ._padding_left_18 {
     padding-left: 18%;
 }
-._padding_top_18{
+
+._padding_top_18 {
     padding-top: 18%;
 }
 
-._margin_left_24{
-margin-left:24px;
+._margin_left_24 {
+    margin-left: 24px;
 }
 
 .h_line {
@@ -146,16 +144,47 @@ margin-left:24px;
     width: 100%;
 }
 
+._width_640{
+    width:640px;
+}
+
+._width_800{
+    width:800px;
+}
+
+._width_960{
+    width:960px;
+}
+
+._width_1080{
+    width:1080px;
+}
+
 ._height100 {
     height: 100%;
 }
+
 ._height48 {
     height: 48%;
 }
 
-._height_600{
+._height_480 {
+    height: 480px;
+}
+
+._height_560 {
+    height: 560px;
+}
+
+._height_600 {
     height: 600px;
 }
+
+._height_640 {
+    height: 640px;
+}
+
+
 ._white_border {
     border-color: #ffffff;
 }
@@ -180,9 +209,11 @@ margin-left:24px;
 .blank_divider48 {
     height: 48px;
 }
+
 .blank_divider51 {
     height: 51px;
 }
+
 .blank_divider64 {
     height: 64px;
 }
