[add] log apps mgmt

--- a/project/modules/log-boot/src/main/resources/static/views/page-template.html
+++ b/project/modules/log-boot/src/main/resources/static/views/page-template.html
@@ -46,13 +46,18 @@
     <div class="page-header">
         <h1>Sticky footer with fixed navbar</h1>
     </div>
-    <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body &gt; .container</code>.</p>
+    <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browser <code>body &gt; .container</code>.</p>
+
+    <input id="aAppCode" class="form-control " type="text" placeholder="应用编号（8位字母或数字）">
+
+
 </div>
 
 <footer class="footer">
     <div class="container">
         <p class="text-muted">Place sticky footer content here.</p>
     </div>
+
 </footer>
 
 
